// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/DescriptionList/Element WithAttributes play-test 1`] = `
<div data-test-block="true">
  <dl>
    <dt id="htmlId"
        class="_term_1bsgs_1 dummyClassname"
        lang="nb"
        data-testid="123ID"
    >
      Ansvarlig fagperson
    </dt>
    <dd class="_description_1bsgs_6">
      Kenneth Performance
    </dd>
  </dl>
</div>
`;

exports[`Tester/DescriptionList/Element WithRef play-test 1`] = `
<div data-test-block="true">
  <dl>
    <dt class="_term_1bsgs_1"
        data-testid="123ID"
        id="dummyIdForwardedFromRef"
    >
      Ansvarlig fagperson
    </dt>
    <dd class="_description_1bsgs_6">
      Kenneth Performance
    </dd>
  </dl>
</div>
`;
